framing and organising flexible design practices

--- a/_posts/thesis_chapters/2024-11-7-Culture.md
+++ b/_posts/thesis_chapters/2024-11-7-Culture.md
@@ -381,11 +381,16 @@ To communicate this approach, as well as starting game activity, I incorporated 
 
 
 
-
 ## Observations on emerging flexible design practices (MORE ON INTERPERSONAL LEVEL)
 
-To restructure.
-More evidence on emerging norms, DoL, and community behaviour.  
+<!-- NOTE To restructure. -->
+
+This section outlines additional video and observational evidence on community and social activity which contributes to the research area on project and design approaches to learning coding. This section outlines and analyses potential useful practices which I characterise as _flexible design practices_ used a counterpoint to a potentially more prescriptive interpretation of design thinking stages.
+
+This characterisation can be seen in some of the entries of the previous chapter which outlined  x, y and z.
+The use of GDPs here can be seen to be quite flexisble
+
+ This includes emerging norms, DoL, and community behaviour.  
 
 This section discusses some of the outcomes stemming from interventions and emergent participant responses in the area of peer and individual working practices.
 
@@ -402,15 +407,15 @@ There is a flexibility here which is encouraged by informal moments of  playtest
 These tensions are mirrored in similar research and were highlighted in the practitioner interviews that I conducted.
  -->
 
-These tensions of allocated roles and dysfunctional group work are mirrored in similar research  - FIND THIS ON PAIR PROGRAMMING
 
-These tensions were were highlighted in the end of P1 feedback and in some practitioner interviews that I conducted. FIND THIS IF SO
-
-In contrast in P2 and P3 there is flexibility of interaction  which suits informal moments of playtesting.
 
 Chapter five outlined examples of GDPS being used as a lingua franca in playtesting sessions for a variety of collaborative work from feedback to direct requests for help from peers.
 
 ARE THERE ARE OTHER STUDIES WHICH ENCOURAGE THIS?
+
+#### Observations and evidence on flexible design practice
+
+Flexible design practices are often present in recorded data. Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint jamming created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisaion. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
 
 
 **Describing Design Cycles as a design process for novices**
@@ -428,7 +433,9 @@ This section explores the process of jamming in the context of game making. Whil
 I propose that this process can have value in other areas of digital making.
 
 
-Flexible design practices are often present in recorded data. Younger participants in particular developed impressively fluid practice demonstrating extremely rapids shifts between code editing, game testing, authoring assets in online tools and migrating files often while talking with peers. Older participants also showed rapid, responsive creativity. Clive quickly incorporated a boost to player health after a level after being given feedback during playtesting. In exploring sound making software Ed and Mark start a process of tinkering and messing about with the capability of the tools which spurs creativity. The joint jamming created two different soundtracks. This sparks a new proposal to incorporate different soundtracks for different levels. Pairs often adopted a similar spirit of improvisaion. For example parent Dan makes a suggestion - "Use paper to design?" - to which Toby replies "I'm just going with it."
+
+
+
 
 
 
@@ -457,6 +464,10 @@ In summary, it is of value to create spaces to leverage the potential of these i
 The potential impact on agency is as follows; If these tasks can be seen as more than mere barriers to production, and therefore to be designed out to increase instrumental agency, then there is potential to increase relational agency through flexible divisions of labour that allow the incorporation of home roles in to this new learning space. Thus a potential affordance to find identify and specialism here.
 
 This a concept is developed later in this discussion.
+
+## Discussion of above areas before wider discussion on Agency
+
+Anything to go here?  
 
 
 ### Discussion in relation to other research - beyond design cycle stages
@@ -1364,3 +1375,12 @@ My rationale for this process was to promote awareness of pluralistic programmin
 I wanted to try to communicate a message to participants that when you are learning something hard it is of value follow your own working preferences and try to discover a creative style that suits you.
 
 Limits of discussion findings - what to put in
+
+
+### Removed in December - perhaps rehome
+
+These tensions of allocated roles and dysfunctional group work are mirrored in similar research  - FIND THIS ON PAIR PROGRAMMING
+
+These tensions were were highlighted in the end of P1 feedback and in some practitioner interviews that I conducted. FIND THIS IF SO
+
+In contrast in P2 and P3 there is flexibility of interaction  which suits informal moments of playtesting.
