--- a/_posts/thesis_chapters/tocs/2024-11-7-Culture.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2024-11-7-Culture.md_toc.md
@@ -7,40 +7,51 @@
             chapter](#notes-on-structure-of-the-chapter)
     -   [Observations / Discussion on Playtesting as a cultural
         process](#observations-discussion-on-playtesting-as-a-cultural-process)
-        -   [Impact of Design on playtesting
-            behaviours](#impact-of-design-on-playtesting-behaviours)
-            -   [Why prioritise local playtesting rather than
-                participation with a wider online community - and how
-                are they different in
-                character?](#why-prioritise-local-playtesting-rather-than-participation-with-a-wider-online-community---and-how-are-they-different-in-character)
-            -   [Reflection on design - MESSY - ANYTHING
-                USEFUL?](#reflection-on-design---messy---anything-useful)
+        -   [Impact of Design on playtesting behaviours
+            (RECAP)](#impact-of-design-on-playtesting-behaviours-recap)
+        -   [Emerging use of narratives and graphics which drawing on
+            home funds of
+            knowledge](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge)
+            -   [Summary: Home Funds and
+                RQs](#summary-home-funds-and-rqs)
             -   [Playtesting and embodied participation in the games of
                 others](#playtesting-and-embodied-participation-in-the-games-of-others)
             -   [Community concepts and norming behaviour emerging
                 during
                 playtesting](#community-concepts-and-norming-behaviour-emerging-during-playtesting)
+            -   [Why prioritise local playtesting rather than
+                participation with a wider online community - and how
+                are they different in character? PERHAPS DROP IF NOT
+                NEEDED OR KEEP REALLY SHORT. AND MERGE
+                UP.](#why-prioritise-local-playtesting-rather-than-participation-with-a-wider-online-community---and-how-are-they-different-in-character-perhaps-drop-if-not-needed-or-keep-really-short.-and-merge-up.)
     -   [Impact of Side Missions and Maker Types on playtesting
         behaviours](#impact-of-side-missions-and-maker-types-on-playtesting-behaviours)
-        -   [On different Game Making
-            approaches](#on-different-game-making-approaches)
-            -   [Observations on Game Making
-                Types](#observations-on-game-making-types)
-            -   [A focus on the value of changing roles - especially
-                peer teaching as reinforcing
-                learning](#a-focus-on-the-value-of-changing-roles---especially-peer-teaching-as-reinforcing-learning)
+        -   [Reflection on impact on my design
+            process](#reflection-on-impact-on-my-design-process)
+        -   [Observations on making
+            styles](#observations-on-making-styles)
+        -   [A focus on the value of changing roles - especially peer
+            teaching as reinforcing
+            learning](#a-focus-on-the-value-of-changing-roles---especially-peer-teaching-as-reinforcing-learning)
         -   [Discussion on making types and side
             missions](#discussion-on-making-types-and-side-missions)
-    -   [Observations on emerging flexible design
-        practices](#observations-on-emerging-flexible-design-practices)
+            -   [MoE](#moe)
+        -   [Limitations of observations and careful statements of
+            potential](#limitations-of-observations-and-careful-statements-of-potential)
+    -   [Observations on emerging flexible design practices (MORE ON
+        INTERPERSONAL
+        LEVEL)](#observations-on-emerging-flexible-design-practices-more-on-interpersonal-level)
+        -   [Observations and evidence on flexible design
+            practice](#observations-and-evidence-on-flexible-design-practice)
         -   [Discussion on Flexible Design
             Practices](#discussion-on-flexible-design-practices)
             -   [The potential of emergent "non-productive"
                 activities](#the-potential-of-emergent-non-productive-activities)
-        -   [Discussion in relation to other research - beyond design
-            cycle
-            stages](#discussion-in-relation-to-other-research---beyond-design-cycle-stages)
-        -   [On Game Jamming](#on-game-jamming)
+        -   [Discussion in relation to other
+            research](#discussion-in-relation-to-other-research)
+            -   [- beyond design cycle
+                stages](#beyond-design-cycle-stages)
+            -   [On Game Jamming](#on-game-jamming)
     -   [Discussion of three dimension of agency using a metaphorical
         approach](#discussion-of-three-dimension-of-agency-using-a-metaphorical-approach)
         -   [Justifying the use of Metaphors in these
@@ -81,11 +92,6 @@
                 agency](#returning-to-the-concept-of-computational-fluency-with-a-lens-of-agency)
     -   [Conclusion](#conclusion)
     -   [TO MOVE OR DROP FROM CHAPTER](#to-move-or-drop-from-chapter)
-        -   [Emerging use of narratives and graphics which drawing on
-            home funds of
-            knowledge](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge)
-            -   [Summary: Home Funds and
-                RQs](#summary-home-funds-and-rqs)
         -   [On planned and emergent
             activity)](#on-planned-and-emergent-activity)
     -   [Notes - MOVED TO THE END FOR
@@ -93,3 +99,5 @@
         -   [On Fluency](#on-fluency)
         -   [Discussion on Player types - moved from chapter
             6](#discussion-on-player-types---moved-from-chapter-6)
+        -   [Removed in December - perhaps
+            rehome](#removed-in-december---perhaps-rehome)
