--- a/_posts/thesis_chapters/2024-11-7-Culture.md
+++ b/_posts/thesis_chapters/2024-11-7-Culture.md
@@ -18,40 +18,51 @@ title: 7. Seeding and Nurturing Community Game Making Practices to Facilitate Le
             chapter](#notes-on-structure-of-the-chapter)
     -   [Observations / Discussion on Playtesting as a cultural
         process](#observations-discussion-on-playtesting-as-a-cultural-process)
-        -   [Impact of Design on playtesting
-            behaviours](#impact-of-design-on-playtesting-behaviours)
-            -   [Why prioritise local playtesting rather than
-                participation with a wider online community - and how
-                are they different in
-                character?](#why-prioritise-local-playtesting-rather-than-participation-with-a-wider-online-community---and-how-are-they-different-in-character)
-            -   [Reflection on design - MESSY - ANYTHING
-                USEFUL?](#reflection-on-design---messy---anything-useful)
+        -   [Impact of Design on playtesting behaviours
+            (RECAP)](#impact-of-design-on-playtesting-behaviours-recap)
+        -   [Emerging use of narratives and graphics which drawing on
+            home funds of
+            knowledge](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge)
+            -   [Summary: Home Funds and
+                RQs](#summary-home-funds-and-rqs)
             -   [Playtesting and embodied participation in the games of
                 others](#playtesting-and-embodied-participation-in-the-games-of-others)
             -   [Community concepts and norming behaviour emerging
                 during
                 playtesting](#community-concepts-and-norming-behaviour-emerging-during-playtesting)
+            -   [Why prioritise local playtesting rather than
+                participation with a wider online community - and how
+                are they different in character? PERHAPS DROP IF NOT
+                NEEDED OR KEEP REALLY SHORT. AND MERGE
+                UP.](#why-prioritise-local-playtesting-rather-than-participation-with-a-wider-online-community---and-how-are-they-different-in-character-perhaps-drop-if-not-needed-or-keep-really-short.-and-merge-up.)
     -   [Impact of Side Missions and Maker Types on playtesting
         behaviours](#impact-of-side-missions-and-maker-types-on-playtesting-behaviours)
-        -   [On different Game Making
-            approaches](#on-different-game-making-approaches)
-            -   [Observations on Game Making
-                Types](#observations-on-game-making-types)
-            -   [A focus on the value of changing roles - especially
-                peer teaching as reinforcing
-                learning](#a-focus-on-the-value-of-changing-roles---especially-peer-teaching-as-reinforcing-learning)
+        -   [Reflection on impact on my design
+            process](#reflection-on-impact-on-my-design-process)
+        -   [Observations on making
+            styles](#observations-on-making-styles)
+        -   [A focus on the value of changing roles - especially peer
+            teaching as reinforcing
+            learning](#a-focus-on-the-value-of-changing-roles---especially-peer-teaching-as-reinforcing-learning)
         -   [Discussion on making types and side
             missions](#discussion-on-making-types-and-side-missions)
-    -   [Observations on emerging flexible design
-        practices](#observations-on-emerging-flexible-design-practices)
+            -   [MoE](#moe)
+        -   [Limitations of observations and careful statements of
+            potential](#limitations-of-observations-and-careful-statements-of-potential)
+    -   [Observations on emerging flexible design practices (MORE ON
+        INTERPERSONAL
+        LEVEL)](#observations-on-emerging-flexible-design-practices-more-on-interpersonal-level)
+        -   [Observations and evidence on flexible design
+            practice](#observations-and-evidence-on-flexible-design-practice)
         -   [Discussion on Flexible Design
             Practices](#discussion-on-flexible-design-practices)
             -   [The potential of emergent "non-productive"
                 activities](#the-potential-of-emergent-non-productive-activities)
-        -   [Discussion in relation to other research - beyond design
-            cycle
-            stages](#discussion-in-relation-to-other-research---beyond-design-cycle-stages)
-        -   [On Game Jamming](#on-game-jamming)
+        -   [Discussion in relation to other
+            research](#discussion-in-relation-to-other-research)
+            -   [- beyond design cycle
+                stages](#beyond-design-cycle-stages)
+            -   [On Game Jamming](#on-game-jamming)
     -   [Discussion of three dimension of agency using a metaphorical
         approach](#discussion-of-three-dimension-of-agency-using-a-metaphorical-approach)
         -   [Justifying the use of Metaphors in these
@@ -92,11 +103,6 @@ title: 7. Seeding and Nurturing Community Game Making Practices to Facilitate Le
                 agency](#returning-to-the-concept-of-computational-fluency-with-a-lens-of-agency)
     -   [Conclusion](#conclusion)
     -   [TO MOVE OR DROP FROM CHAPTER](#to-move-or-drop-from-chapter)
-        -   [Emerging use of narratives and graphics which drawing on
-            home funds of
-            knowledge](#emerging-use-of-narratives-and-graphics-which-drawing-on-home-funds-of-knowledge)
-            -   [Summary: Home Funds and
-                RQs](#summary-home-funds-and-rqs)
         -   [On planned and emergent
             activity)](#on-planned-and-emergent-activity)
     -   [Notes - MOVED TO THE END FOR
@@ -104,6 +110,8 @@ title: 7. Seeding and Nurturing Community Game Making Practices to Facilitate Le
         -   [On Fluency](#on-fluency)
         -   [Discussion on Player types - moved from chapter
             6](#discussion-on-player-types---moved-from-chapter-6)
+        -   [Removed in December - perhaps
+            rehome](#removed-in-december---perhaps-rehome)
 
 # Seeding and Nurturing Community Game Making Practices to Facilitate Learner Agency
 
@@ -210,20 +218,66 @@ Later we look specifically at side missions (drama) & player types
 
 
 
-#### Why prioritise local playtesting rather than participation with a wider online community - and how are they different in character? PERHAPS DROP IF NOT NEEDED OR KEEP REALLY SHORT. AND MERGE UP.
 
-While a lot of other research has focused on community as an online phenomenon, in this research that aspect has not been explored.
+### Emerging use of narratives and graphics which drawing on home funds of knowledge
 
-This section explores my decision to prioritise local playtesting rather than participation with a wider online community as well as  how are they different in character.
+**While the potential to add graphics was a core affordence of the starting processes of the templated game, the process of designing and sharing and the peer commentary on the process emergered as the sessions evolved.**
 
-One reason was practical,  a suitable online community pitched at children or even at novices was not apparent using the chosen tools set.
+The literature review outlined the potential of home interests as funds of knowledge, especially informal learning. This learning design provided participants with different ways to input and explore their home interests in the narrative and graphical elements of their created games. For example the choice of game characters allowed the expression of identity. Other designed elements for example audio and graphical effects or written messages added to the overall aesthetic or polish of the game.
 
-The advantages of this decision is that interactions play out off the screen, the limited games available increase community interaction, as participants drew only from a small pool of locally created games.
+Video evidence indicated that conflicts involved between learner expectations and their technical abilities are helped by the use of the starting template. The
+constraints of provided game elements and implied narrative structure of the template accelerated the initial creative process.
 
-While there is convincing research on on how online community  can engender feelings of agency and motivation [ROQUE AND ITO AND GEE], I chose not to connect with existing online communities in this learning design. Online communities can serve as a form of authentic feedback as explored in the Scratch and New Grounds community websites. However, the process of being involved in an online community and in addition learning the processes of participation diverts time and focus from other activities including real life playtesting.
+<!-- (like a  musical style from which to jam from, or provided constraints in a drama process which help guide improvisation.) -->
+
+One pair Clive and Pearl, the grandparents of Toby, included a narrative message at the start of their game. This process surfaced the expertise of the family as beekeepers, sparking interesting conversations with other participants.
+
+     var starttext = "This is a game which pits a honey bee against a swarm of Asian hornets,  which are alien invaders attacking bee  hives in the UK and which beekeepers are trying to stop spreading  here. Try to guide the bee to collect all the flowers without being caught by the hornets.
+     Use the arrow keys to move the bee. Press return to START.";
+
+<!-- In a noteworthy exchange a young participant Zi asks one of the grandparents of child if they had done any amazing things in their life. This exchange follows
+
+   zi: Have you done amazing things?
+
+The exchange seems to throw Pa but they draw Zi's attention back to the game. Showing that it demonstrates their interest in bees as they are beekeepers.
+
+The source of Pa's hesitancy to share more is not clear. However her willingness to share that part of her personal story via the narrative of the game is shown here as is the willingness of the young participant to ask about the personal experiences of the older participant during the process of peer testing her game. -->
+
+In another example, Mark and Ed designed a game around the character of a train driver that needed to collect coal. In subsequent post course interview Mark describes the impact of the child feeling like they could bring their own identity and interest into the project. "I know just your eyes lit up when you realised you could expand your interests into gaming." See Appendix 4.x (Mark and Ed working with home interests)
+
+<!-- The process of creating assets builds in Molly the identity of a proficient maker. She wants to build on her achievement of being an "expert pixel".  -->
 
 
-In addition, the diversity of creations available on a online community may also have detracted from the more shared experience of the template used. Not offering a choice of starting game helped this shared technical and cultural base.     
+
+<!-- NOTE
+NARRATIVE / drama IN PREVIOUS CHAPTER?
+how do these two sections work together? remove this one?
+ -->
+<!-- The incorporation of the graphic was relatively quick and easy change to make the game but had a significant factor in the affect towards the game [erikssonUsingGameplayDesign2019;] BRING ON OTHER LITERATURE HERE ON PERSONAL EXPRESSION, FUNDS OF KNOWLEDGE IN THIS AREA. Roque, Scratch, Kafai, Gee etc. -->
+
+<!-- Ideally look for evidence of sharing in communities, especially developing processes, avoiding traps which sap momentum, -->
+
+<!-- While these aspects are covered in other literature, and are therefore not covered in depth in this chapter, it is important to include their strong presense in the data of study. And to situate them in relation to other chapter contents. HOW EXACTLY. -->
+
+Other participants expressed pride over their graphical creations. In this excerpt parent Molly has spent time creating a pixel art representation of an alien. The full exchange (see appendix 4.x) sees Molly cultivating a sense of ownership over the graphical element that she has created. There is also the development of a growing sense of competency in this area of asset design. She notes she is an "expert pixel".
+
+    Molly: We’re finished.  Right what’s next? Now I’m an expert pixel? Now I have to figure out how to get it in there, don’t I? Without losing it. I’ll be very upset.
+    Sonia: Have you saved it?
+    Molly: No I’ve not saved it.
+    Sonia: Save there. (points to relevant button on screen)
+
+The growing mastery of this area also seems to help drive motivation to complete the next challenge. The sense of ownership spurs the technical process of saving projects. Her pride in her work and concern surrounding losing it provokes a fellow parent to show her how to save her work.
+
+#### Summary: Home Funds and RQs
+
+This research supports findings of other research which highlight value of incorporating home interests in  games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]. It also aligns with PBL literature which advocates the personalisation of projects and the value of exploring concepts using home funds of knowledge [@moje_maestro_2001]
+
+This research indicates that in particular, allowing participants to incorporate home interests can be highly motivating in early stages of the design process. It can also sustain the coding activity later in the process encouraging participants to overcome problems in order to share the personalised object created.
+
+In addition, the tacit knowledge of children as game players gives them access to varied affordances in the process of feeding back.
+
+There is also evidence here that frictions involved in dealing with participant expectations of the genre and professionalism of the game they will create, are helped by the use of a templated game. Both in terms of the technical platform and the implied narrative and creative frame which scaffolds the initial creative process. This supports existing research on the value of constraints in facilitating rapid creative improvisation in the areas of music and drama. The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype].
+HOW TO EXTEND?
 
 
 <!-- #### on alien chat
@@ -295,6 +349,22 @@ There is an apparent tension in play here between encouraging individual agency 
 What we can draw from the data at this stage is that playtesing provides many leverage points to facilitating learner agency and discuss the limits of designs. IN addition, playtesting is a process that allows participants to demonstrate informed criticality as a player and guide the creations of peers via gameplay feedback.
 
 This process is an example of an emerging process where cultural concepts are mutually constituted by all actors involved in the game making activity system. While the concepts of hardness and challenge that emerge and not concrete examples of GDPS, they are the results of changed GDPs. The next chapter explores similar data on the use of GDP related concepts by participants and the resultant potential impact on participant agency.
+
+
+#### Why prioritise local playtesting rather than participation with a wider online community - and how are they different in character? PERHAPS DROP IF NOT NEEDED OR KEEP REALLY SHORT. AND MERGE UP.
+
+While a lot of other research has focused on community as an online phenomenon, in this research that aspect has not been explored.
+
+This section explores my decision to prioritise local playtesting rather than participation with a wider online community as well as  how are they different in character.
+
+One reason was practical,  a suitable online community pitched at children or even at novices was not apparent using the chosen tools set.
+
+The advantages of this decision is that interactions play out off the screen, the limited games available increase community interaction, as participants drew only from a small pool of locally created games.
+
+While there is convincing research on on how online community  can engender feelings of agency and motivation [ROQUE AND ITO AND GEE], I chose not to connect with existing online communities in this learning design. Online communities can serve as a form of authentic feedback as explored in the Scratch and New Grounds community websites. However, the process of being involved in an online community and in addition learning the processes of participation diverts time and focus from other activities including real life playtesting.
+
+
+In addition, the diversity of creations available on a online community may also have detracted from the more shared experience of the template used. Not offering a choice of starting game helped this shared technical and cultural base.     
 
 
 
@@ -465,12 +535,11 @@ The potential impact on agency is as follows; If these tasks can be seen as more
 
 This a concept is developed later in this discussion.
 
-## Discussion of above areas before wider discussion on Agency
-
-Anything to go here?  
 
 
-### Discussion in relation to other research - beyond design cycle stages
+### Discussion in relation to other research
+
+#### - beyond design cycle stages
 
 These observations of the value of flexible design processes, invite discssion on how best to conceptualise and support these flexible approaches. Game Jams are accelerated events encouraging creative collaboration and innovation. While the event's premise is to promote collaboration, these events are inconsistent in their support and scaffolding of collaborative approaches [@goddard_playful_2014].
 
@@ -478,7 +547,7 @@ Other relevant perspectives include rhizomatic design approaches  [@de_freitas_c
 
 However, in this context the link is imiled or ther eare otehr problems with framing as rhizomatic metaphor in terms of communicating the essence of the flexible approach beyond academic audience.  
 
-### On Game Jamming
+#### On Game Jamming
 
 So instead of rhizomatic design process, I propose that the tools, process and the community in this study mutually encourage an improvisational approach often referred to as jamming.
 
@@ -806,66 +875,6 @@ The final chapters aims to address this with  recommendations for facilitators a
 
 ## TO MOVE OR DROP FROM CHAPTER
 
-
-### Emerging use of narratives and graphics which drawing on home funds of knowledge
-
-**While the potential to add graphics was a core affordence of the starting processes of the templated game, the process of designing and sharing and the peer commentary on the process emergered as the sessions evolved.**
-
-The literature review outlined the potential of home interests as funds of knowledge, especially informal learning. This learning design provided participants with different ways to input and explore their home interests in the narrative and graphical elements of their created games. For example the choice of game characters allowed the expression of identity. Other designed elements for example audio and graphical effects or written messages added to the overall aesthetic or polish of the game.
-
-Video evidence indicated that conflicts involved between learner expectations and their technical abilities are helped by the use of the starting template. The
-constraints of provided game elements and implied narrative structure of the template accelerated the initial creative process.
-
-<!-- (like a  musical style from which to jam from, or provided constraints in a drama process which help guide improvisation.) -->
-
-One pair Clive and Pearl, the grandparents of Toby, included a narrative message at the start of their game. This process surfaced the expertise of the family as beekeepers, sparking interesting conversations with other participants.
-
-     var starttext = "This is a game which pits a honey bee against a swarm of Asian hornets,  which are alien invaders attacking bee  hives in the UK and which beekeepers are trying to stop spreading  here. Try to guide the bee to collect all the flowers without being caught by the hornets.
-     Use the arrow keys to move the bee. Press return to START.";
-
-<!-- In a noteworthy exchange a young participant Zi asks one of the grandparents of child if they had done any amazing things in their life. This exchange follows
-
-   zi: Have you done amazing things?
-
-The exchange seems to throw Pa but they draw Zi's attention back to the game. Showing that it demonstrates their interest in bees as they are beekeepers.
-
-The source of Pa's hesitancy to share more is not clear. However her willingness to share that part of her personal story via the narrative of the game is shown here as is the willingness of the young participant to ask about the personal experiences of the older participant during the process of peer testing her game. -->
-
-In another example, Mark and Ed designed a game around the character of a train driver that needed to collect coal. In subsequent post course interview Mark describes the impact of the child feeling like they could bring their own identity and interest into the project. "I know just your eyes lit up when you realised you could expand your interests into gaming." See Appendix 4.x (Mark and Ed working with home interests)
-
-<!-- The process of creating assets builds in Molly the identity of a proficient maker. She wants to build on her achievement of being an "expert pixel".  -->
-
-
-
-<!-- NOTE
-NARRATIVE / drama IN PREVIOUS CHAPTER?
-how do these two sections work together? remove this one?
- -->
-<!-- The incorporation of the graphic was relatively quick and easy change to make the game but had a significant factor in the affect towards the game [erikssonUsingGameplayDesign2019;] BRING ON OTHER LITERATURE HERE ON PERSONAL EXPRESSION, FUNDS OF KNOWLEDGE IN THIS AREA. Roque, Scratch, Kafai, Gee etc. -->
-
-<!-- Ideally look for evidence of sharing in communities, especially developing processes, avoiding traps which sap momentum, -->
-
-<!-- While these aspects are covered in other literature, and are therefore not covered in depth in this chapter, it is important to include their strong presense in the data of study. And to situate them in relation to other chapter contents. HOW EXACTLY. -->
-
-Other participants expressed pride over their graphical creations. In this excerpt parent Molly has spent time creating a pixel art representation of an alien. The full exchange (see appendix 4.x) sees Molly cultivating a sense of ownership over the graphical element that she has created. There is also the development of a growing sense of competency in this area of asset design. She notes she is an "expert pixel".
-
-    Molly: We’re finished.  Right what’s next? Now I’m an expert pixel? Now I have to figure out how to get it in there, don’t I? Without losing it. I’ll be very upset.
-    Sonia: Have you saved it?
-    Molly: No I’ve not saved it.
-    Sonia: Save there. (points to relevant button on screen)
-
-The growing mastery of this area also seems to help drive motivation to complete the next challenge. The sense of ownership spurs the technical process of saving projects. Her pride in her work and concern surrounding losing it provokes a fellow parent to show her how to save her work.
-
-#### Summary: Home Funds and RQs
-
-This research supports findings of other research which highlight value of incorporating home interests in  games, coding and media projects [@resnick_mothers_2012; @papert_mindstorms:_1980]. It also aligns with PBL literature which advocates the personalisation of projects and the value of exploring concepts using home funds of knowledge [@moje_maestro_2001]
-
-This research indicates that in particular, allowing participants to incorporate home interests can be highly motivating in early stages of the design process. It can also sustain the coding activity later in the process encouraging participants to overcome problems in order to share the personalised object created.
-
-In addition, the tacit knowledge of children as game players gives them access to varied affordances in the process of feeding back.
-
-There is also evidence here that frictions involved in dealing with participant expectations of the genre and professionalism of the game they will create, are helped by the use of a templated game. Both in terms of the technical platform and the implied narrative and creative frame which scaffolds the initial creative process. This supports existing research on the value of constraints in facilitating rapid creative improvisation in the areas of music and drama. The domains of programming, game jams and hackathons also use constraints in a similar way [@gabler2005prototype].
-HOW TO EXTEND?
 
 
 ### On planned and emergent activity)
