--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -240,7 +240,7 @@ AT provides a concept of rising to the concrete which invites analysis of how th
 <!-- The previous chapter described the  key elements of the learning design that were in place by P2 ( remixing from a game template, use of distributed asset creation showcasing and social playtesting).  The shared tools and documentations began to shape goal setting around implementing new features, some where held in common with other groups. -->
 
 
-## Study of Vignette A
+## Study of Vignette 2
 
 In this section, to give an overview of the specifics of the learning design, and participant interactions I use vignette to give a snapshot of the interactions of one family. This comprises a table of participant dialogue, screenshots and description of their interactions including gestures followed by a summary interpretation of interactions.
 
@@ -359,20 +359,25 @@ The resulting coding structure is available online here.
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
 
 
-### Descriptive Commentary on Vignette A
+### Descriptive Commentary on Vignette 2
+
+MOVE A LOT OF THIS TO THE APPENDIX - CREATE A SUMMARY HERE.
 
 <!-- PERHAPS - REWRITE SOME OF THIS IN SANNINO TERMS OF AGENCY? -->
 
 <!-- **Describing on a level of personal** -->
 
-The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code struct2024-10-6-Gdpsures and thus this adds a new level of conceptual and practical complexity. The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. For this pair, these more involved coding activities were beyond the ability of the child. The parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice. These include which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child.
+The key and door pattern is one of the harder ones to implement as it involves adding two new functions, which while simple enough, represent new code structures and thus this adds a new level of conceptual and practical complexity. The implementation of a new game design pattern (GDP) involve adding new code to the game. The amount of code and/ changes needed varied depending on its complexity. Larger changes typically need more careful manipulation of code and subsequent debugging. For this pair, these more involved coding activities were beyond the ability of the child. The parent Suzanna has taken on the role of solving harder code problems and in doing so has built important proficiency in coding practice. These include which include; finding and comprehending supporting documentation, fluidly navigating between undertaking more advanced coding to implement new GDPs, playtesting and preparing the coding environment for more basic coding of her child.
 
 
 <!-- PERHAPS A SCREENSHOT OF THE TEXT BOOK - PERHAPS NAVIGATING THE DROP DOWN MENU OF PATTERNS.  -->
 
 <!-- **Guided participation:**  -->
 
-The parent takes action to involve her child in the design process when technical possible and to incorporate her child's interests. The parent overcomes her own hesitancy regarding asking for facilitator help by sending out her child to ask. She signals clearly to her child when the process returns certain design stages indicating that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child prompting the child to play-test the game. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions.
+The parent takes action to involve her child in the design process when technical possible and to incorporate her child's interests.
+
+THIS HAPPENS BEFORE THE VIGNETTE EXTRACT.
+In the full vignette transcription included in the appendices as Vignette 2, the parent overcomes her own hesitancy regarding asking for facilitator help by sending out her child to ask. When the code problem has been solve, she signals clearly to her child to return to the design process. This indicates that she is aware of the greater possibility for effective child input at these moments. After a blockage caused by debugging coding is removed, the parent immediately re-engages the child prompting the child to play-test the game. The child is one of the younger participants when blockages occur she explores the room or to dwell on the periphery of other participants interactions.
 
 <!-- This pair structured the process of implementing new GDPs through careful use of documentation, alternate use of keyboard, adult facilitating and coding process responsive to the child's lead, other individuals and pairs approached the same objectives in diverse ways.  -->
 
@@ -381,17 +386,13 @@ The parent takes action to involve her child in the design process when technica
 <!--
 The supporting resources are available here.
 https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-keys-and-doors -->
-
-
-
 <!-- **Cultural:**  -->
 
-The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants. It is likely that this Olivia's interest stems in part from observations of other participants games and this discourse. The child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child along with chivvying to the mother to get started on it.
+The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants. It is likely that this Olivia's interest stems in part from observations of other participants games and this discourse. The child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child. She also chivvies the mother to get started on it (Key.)?.
 
 There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The parent cautions "it's no fun if their are no hazards". I interprete the response of the child -  "It is for me!" - to show her awareness of the conventions of game design and a desire to work against them. Later the child articulate her motivation to _surprise_ players with this level design.
 
 <!-- This chapter now expands to represent this diversity of the coding and community practices of participants, focusing on their use of game design patterns. -->
-
 
 <!--
 MOVE TO DOL IF NEEDED
@@ -441,13 +442,9 @@ SHIFT THIS TO Methodolgy & SUMMARISE HERE -->
 <!-- - the media literacy practices of transfer between tools - similar to other studies - see guided participation papers -->
 
 
-
-
-
-
 ## Cultural Dimension
 
-### Role of playtesting and feedback and GDPs
+### Role of playtesting PLAYTESTING IN NEXT CHAPTER CAN SOME BE MOVED HERE? and feedback and GDPs
 
 
 #### GDP concepts and language used in informal feedback for peers to influence modification of games
@@ -532,7 +529,7 @@ Player jump (y) velocity was set very high but left right (x) velocity was slow.
 <!-- These norming behaviours some of the informal norming behaviours that are less directive seen in the work of Rogoff and colleagues as explored in literature review [@rogoff_cultural_2003]. -->
 
 
-#### The propagation of use of GDPs through playtesting
+#### The propagation of use of GDPs (through playtesting() IS IT PLAYTESTING THAT IS IMPORTANT HERE - OR THE ROLE AND NATURE OF GDPS TO AID PROPAGATION
 
 **The implementation of particular GDPs by participant pairs or individuals often spread through peer activity.**
 
