--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -388,7 +388,7 @@ The supporting resources are available here.
 https://en.flossmanuals.net/phaser-game-making-in-glitch/_full/#game-mechanic-keys-and-doors -->
 <!-- **Cultural:**  -->
 
-The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants. It is likely that this Olivia's interest stems in part from observations of other participants games and this discourse. The child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child. She also chivvies the mother to get started on it (Key.)?.
+The child Olivia also wants to add additional levels to their game. In recent sessions several young participants had added new levels to their games, including Toby who added over twenty. This activity had sparked much discourse between participants. It is likely that this Olivia's interest stems in part from observations of other participants games and this discourse. The child shows ongoing affective connection to the game making patterns. For example, one target game design pattern _Keys and Doors_ is repeated in a sing song voice by the child. She also chivvies the mother to get started on it (Key.)?..
 
 There is also awareness of and playfulness surrounding the conventions of a platformer game as a dynamic system in way which drives their work on the design and coding mechanics of the game.  An understanding of the game as a dynamic system is seen clearly in the parent’s alarm when, shortly after this interaction, the child deletes all elements of hazard in one level. The parent cautions "it's no fun if their are no hazards". I interprete the response of the child -  "It is for me!" - to show her awareness of the conventions of game design and a desire to work against them. Later the child articulate her motivation to _surprise_ players with this level design.
 
