move some aspect to the intro - GDPs

--- a/_posts/thesis_chapters/2024-11-6-Gdps.md
+++ b/_posts/thesis_chapters/2024-11-6-Gdps.md
@@ -150,24 +150,21 @@ And the coding structure here
 https://docs.google.com/document/d/19PafC_w_7uObYL4v86IGeeFZTw2yKxjHfP_k85rHk_s/edit# -->
 
 
-## On GDP as a germ-cell and unit of analysis recap of design patterns
-
+**On GDP as a germ-cell and unit of analysis recap of design patterns**
 <!-- In the introduction of this thesis, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge.  -->
 
 This chapter centres on an interpretation of the implementation of game design patterns (GDPs) as a unit of analysis or germ-cell of activity.  
 
-### Recap on design patterns and game design patterns
+_Recap on design patterns and game design patterns_
 
 In chapter two the use of design patterns in an education context were summarised. Design patterns provide a relatable contextual basis for learning complex code structures. More specifically, game design patterns they have been used in educational settings. In the work of Repenning and colleagues [@repenning_scalable_2015; @basawapatna_using_2010] GDPs are framed as science simulation concepts that aid transfer of concepts to similar setting. Eriksson and colleagues [-@eriksson_using_2019] draw on catalogue of GDPs can provide a useful basis for co-design work to help deepen the knowledge of participants and provide a shared language to help collaborative design.
 
 
   <!-- -  design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS) -->
   <!-- - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006]. -->
-
-
 <!-- While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope.  -For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application. -->
 
-### Identifying GDPs as a germ cell/ unit of analysis
+_Identifying GDPs as a germ cell/ unit of analysis_
 
 The last chapter explored the mutual evolution of the learning design, shaped by direct input, explicit requests and the implicit needs of the community and resulting feedback. The leading activity of iteratively of altering a game at the level of gameplay design pattern which emerged from this experimental process.  This chapter develops analysis of the role of GDPs as a guiding process for supporting resources and support processes in varied forms. These include a set of code examples, instruction tutorials, quick start activities which proposed micro level code modification.
 
