coding for culture

--- a/_posts/thesis_chapters/2024-11-7-Culture.md
+++ b/_posts/thesis_chapters/2024-11-7-Culture.md
@@ -131,6 +131,21 @@ List what is needed / referenced in broad terms to help with planning - e.g.
     3. How can learners build agency in an evolving community of game makers?
 
 
+### Notes on coding for this chapter
+See also thematic coding online
+
+- Playtesting and play
+- Community concepts emerging in playtesting
+- Home funds used in design & playtesting
+- Side missions
+- Maker types
+- Authentic knowledge and agency
+- Flexible design processes
+  - Participant driven design - beyond gdps
+  - Design improvisation - beyond design stages
+  - Non productive
+
+Really come back to the RQs and the data.
 
 ## Introduction
 
@@ -192,7 +207,7 @@ This section describes and discusses some of the emergent, flexible and adaptive
 
 
 
-## Observations / Discussion on Playtesting as a cultural process
+## Observations on emerging idioculture and the role of playtesting in particular
 
 <!-- HOW MUCH OF THIS COULD LIVE IN CHAPTER 7 AS A AGENCY / PLAYTESTING SECTION? -->
 
@@ -220,6 +235,8 @@ Later we look specifically at side missions (drama) & player types
 
 
 ### Emerging use of narratives and graphics which drawing on home funds of knowledge
+
+NOT REALLY ONLY TO DO WITH PLAYTESTING.
 
 **While the potential to add graphics was a core affordence of the starting processes of the templated game, the process of designing and sharing and the peer commentary on the process emergered as the sessions evolved.**
 
